--- a/base_ratesBackEnd/package.json
+++ b/base_ratesBackEnd/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0"
   },
