--- a/base_ratesBackEnd/package.json
+++ b/base_ratesBackEnd/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0"
   },
